Started to create a 3state relation identification and some code to guide the path found based on deadlock states. This version was distibutated with SP relaease 120410